deploy/kubernetes/kube-sql-api.yml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: sql-api
  labels:
    k8s-app: sql-api
spec:
  replicas: 2
  selector:
    matchLabels:
      k8s-app: sql-api

  strategy:
        type: RollingUpdate

  template:
    metadata:
      labels:
        k8s-app: sql-api
    spec:
      serviceAccountName: sql-api
      terminationGracePeriodSeconds: 60

      containers:
      - name: sql-api
        image: tintoy.azurecr.io/daas/api:1.0.0-dev
        imagePullPolicy: Always
        ports:
          - containerPort: 5000
      
      imagePullSecrets:
          - name: daas-registry
