deploy/kubernetes/kube-sql-provisioning.yml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: sql-provisioning
  labels:
    k8s-app: sql-provisioning
spec:
  replicas: 1
  selector:
    matchLabels:
      k8s-app: sql-provisioning

  strategy:
        type: Recreate

  template:
    metadata:
      labels:
        k8s-app: sql-provisioning
    spec:
      serviceAccountName: sql-provisioning
      terminationGracePeriodSeconds: 60

      containers:
      - name: sql-provisioning
        image: tintoy.azurecr.io/daas/provisioning:1.0.0-dev
        imagePullPolicy: Always
        ports:
          - containerPort: 5000
      
      imagePullSecrets:
          - name: daas-registry
