deploy/kubernetes/kube-sql-ui.yml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: sql-ui
  labels:
    k8s-app: sql-ui
spec:
  replicas: 3
  selector:
    matchLabels:
      k8s-app: sql-ui

  strategy:
        type: RollingUpdate

  template:
    metadata:
      labels:
        k8s-app: sql-ui
    spec:
      serviceAccountName: sql-ui
      terminationGracePeriodSeconds: 60

      containers:
      - name: sql-ui
        image: tintoy.azurecr.io/daas/ui:1.0.0-dev
        imagePullPolicy: Always
        ports:
          - containerPort: 5000
      
      imagePullSecrets:
          - name: daas-registry
