deploy/kubernetes/kube-sql-executor-service.yml
apiVersion: v1
kind: Service
metadata:
  name: sql-executor
  labels:
    k8s-app: sql-executor
spec:
  ports:
  - port: 5000
    targetPort: 5000
    protocol: TCP
    name: sql-executor
  selector:
    k8s-app: sql-executor
